--- a/myproject/docker-composer.yml
+++ b/myproject/docker-composer.yml
@@ -9,8 +9,7 @@ services:
       - .:/app
     depends_on:
       - db
-    # Override the default command specified in the Dockerfile
-    command: sh -c "watchmedo auto-restart --directory=./ --pattern=*.py --recursive -- python manage.py runserver 0.0.0.0:8000"
+    command: ["sh", "-c", "python manage.py runserver_plus 0.0.0.0:8000"]
   db:
     image: postgres
     environment:
