--- a/myproject/dockerfile
+++ b/myproject/dockerfile
@@ -6,7 +6,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # Set the working directory in the container
-WORKDIR /myproject
+WORKDIR /app
 
 # Install dependencies
 COPY requirements.txt .
@@ -15,9 +15,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the Django project into the container
 COPY . .
 
-# Run migrations and collect static files
+# Run migrations
 RUN python manage.py migrate
 
-
-# Start the Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Start the Django development server with hot reloading
+CMD ["watchmedo", "auto-restart", "--directory=./", "--recursive", "--", "python", "manage.py", "runserver_plus", "0.0.0.0:8000"]
